# encode

./: CMakeLists.txt  README.md
src/: encoder.cpp  thread.h  threadpool.cpp  threadpool.h
