cmake_minimum_required(VERSION 3.1)
project(encoder_multi)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(THREADS_PREFER_PTHREAD_FLAG ON)
set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
set(CMAKE_EXE_LINKER_FLAGS "-static -Wl,--whole-archive -lpthread -Wl,--no-whole-archive -flto")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Og --std=c++14 -Wall -flto -ggdb -D_GLIBCXX_GTHREAD_USE_WEAK=0" )

enable_language(CXX)

find_package(Lame REQUIRED)
find_package (Threads REQUIRED)
set(LIBS ${LIBS} ${LAME_LIBRARIES} Threads::Threads)
include_directories(${LAME_INCLUDE_DIRS})
add_executable(encoder_multi src/encoder.cpp src/threadpool.cpp)
target_link_libraries(encoder_multi ${LIBS})
